syntax = "proto3";

package com.tm.kotlin.models.grpc;
option java_package = "com.tm.kotlin.models.grpc";
option java_multiple_files = true;

service HelloService {
    rpc SayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}
